cmd/host-profiler/deploy/apparmor-installer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dd-host-profiler-apparmor-installer
  namespace: dd-host-profiler
  labels:
    app: dd-host-profiler-apparmor-installer
spec:
  selector:
    matchLabels:
      app: dd-host-profiler-apparmor-installer
  template:
    metadata:
      labels:
        app: dd-host-profiler-apparmor-installer
      annotations:
        container.apparmor.security.beta.kubernetes.io/install-apparmor: unconfined
    spec:
      tolerations:
        - operator: Exists
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.9
          resources:
            requests:
              cpu: 1m
              memory: 4Mi
            limits:
              cpu: 10m
              memory: 8Mi
      volumes:
        - name: profiles
          configMap:
            name: dd-host-profiler-profiles
        - name: host-apparmor
          hostPath:
            path: /etc/apparmor.d
            type: DirectoryOrCreate
        - name: host-proc
          hostPath:
            path: /proc
