cmd/host-profiler/deploy/seccomp-installer.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: seccomp-installer
  namespace: dd-host-profiler
spec:
  selector:
    matchLabels:
      app: seccomp-installer
  template:
    metadata:
      labels:
        app: seccomp-installer
    spec:
      hostPID: true
      containers:
        - name: pause
          image: gcr.io/google_containers/pause:3.1
          resources:
            requests:
              cpu: 1m
              memory: 8Mi
      tolerations:
        - operator: Exists
      volumes:
        - name: host-root
          hostPath:
            path: /
        - name: profiles
          configMap:
            name: seccomp-profile
